--- a/src/style.css
+++ b/src/style.css
@@ -17,9 +17,19 @@
     font-family: 'Anton', sans-serif;
     color: var(--color-primary);
 }
+
+
 body{
     background-color: var(--color-primary);
+    display: grid;
+    grid-template-rows: auto 1fr auto;
 
+}
+header, footer {
+    height: 10vh; /* Altura del header y footer: 10% de la altura de la ventana */
+  }
+main{
+    min-height: 80vh;
 }
 header{
     display: flex;
@@ -162,4 +172,26 @@ footer{
     font-size: 1.1rem;
     line-height: 1.7rem;
 }
+.contact{
+    background-color: #FFDB58;
+    display: flex;
+    flex-direction: column;
+    gap: .5rem;
+}
 
+.uber-link, .phone-container{
+    margin: 1rem 2rem;
+}
+.phone-container{
+    margin-top: 1rem;
+    display: flex;
+    gap: 0.4rem;
+    align-items: center;
+}
+.phone-image{
+    width: 2.2rem;
+    height: 2.2rem;
+}
+.phone-number{
+    font-size: 2rem;
+}
