--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -9,3 +9,9 @@
 .leaflet-control-attribution {
   filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%);
 }
+
+@media only screen and (max-width: 300px) {
+  #map{
+      height: 450px;
+  }
+}
